--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
   "name": "calispp2",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "dependencies": {
-    "expo": "~48.0.15",
+    "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/native": "^6.0.2",
+    "date-fns": "^2.30.0",
+    "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
+    "firebase": "^9.22.2",
+    "lodash": "^4.17.21",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10",
+    "react-native-webview": "11.26.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.195",
+    "@types/react": "~18.0.14",
+    "@types/react-native-dotenv": "^0.2.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~48.0.0",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
