--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "date-fns": "^2.30.0",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.2",
+    "expo-sharing": "~11.2.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
