--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-API_KEY=AIzaSyDrDIirUh0PcZUFEDlasZK887zGXyhIXtw
-AUTH_DOMAIN=calispp-dev.firebaseapp.com
-PROJECT_ID=calispp-dev
-STORAGE_BUCKET=calispp-dev.appspot.com
-MESSAGING_SENDER_ID=538046063048
-APP_ID=1:538046063048:web:892a4c7dda8a4d658020fd
+API_KEY=AIzaSyCCqHETQ49p5WZkzDRk_FCkx9DRZHsdfAU
+AUTH_DOMAIN=calispp.firebaseapp.com
+PROJECT_ID=calispp
+STORAGE_BUCKET=calispp.appspot.com
+MESSAGING_SENDER_ID=772670542418
+APP_ID=1:772670542418:web:00c750b98c4bf16c25058b
 TEST=1
