--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "calispp2",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "jest": {
@@ -38,6 +38,7 @@
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
